# cmpt214

A5-DOE869-CMPT214/: CMakeLists.txt  Makefile_q1  Makefile_q2  gameboard.c  gameboard.h
A6-doe869-cmpt214/: Makefile  asn6q2.in  asn6q2.out  rs.c
A7-doe869-cmpt214/: asn7q2.txt  asn7q3.sh  asn7q4.sh
Asn7-Files/__MACOSX/: ._starter-pack
Asn7-Files/starter-pack/: asn7q2.txt  rs
Assignment/: ans1q1.c  ans1q2.c  ans1q3.c  q1-output.txt  q2-output.txt  q3-output.txt
Assignment3/: asn3q1.c  asn3q4.c  quests.txt
Assignment3/__MACOSX/: ._asn3q1-starter.c  ._asn3q4-starter.c  ._quests.txt
Assignment4/: asn4q1.c  asn4q2.c  asn4q3.c
Assignment4-ProvidedFiles/: asn4q1.c  asn4q3.c  loot.txt
Assignment4-ProvidedFiles/__MACOSX/: ._asn4q1-starter.c  ._asn4q3-starter.c  ._loot.txt  ._sq4.txt  ._sq5.txt  ._sq9.txt
Assignment4/Assignment4-Solutions/: asn4q1.c  asn4q2.c  asn4q3.c
Assignment5-Solutions/: CMakeLists.txt  Makefile_q1  Makefile_q2  field.c  field.h  position.c  position.h  treasure.c  treasure.h  treasure_bug_fixed.c
asn5_starter_pack/__MACOSX/: ._gameplay.c  ._gameplay.h  ._rand_num.c  ._rand_num.h  ._shipbattle.c
asn6_starter_pack/: rs.diff
assigment-3/: asn3q1.c  asn3q2.c  asn3q3-doe869-output.txt  asn3q3-quests-output.txt  asn3q3.c  asn3q4-output.txt  asn3q4.c  menu-doe869.txt  quests-doe869.txt
assigment-3/Assignment3-Solutions/: asn3q1.c  asn3q2.c  (+2 more)
assignment2/: asn2q1-output.txt  asn2q1.c  asn2q4-output.txt  asn2q4.c  asn2q5-output.txt  asn2q5.c
assignment_1/: ans1q1.c  ans1q2.c  ans1q3.c  q1-output.txt  q2-output.txt  q3-output.txt
(+22 files in other folders)
